--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
     </head>
     <body>
         <div>
+            <a href="https://portal.hanyang.ac.kr/sso/lgin.do">
+                <button class="custom-btn btn-1">한양인</button>
+            </a>
+        </div>
+        <div>
             <a href="http://is.hanyang.ac.kr/%ED%95%99%EA%B3%BC-%EA%B3%B5%EC%A7%80/%ED%95%99%EA%B3%BC-%EA%B3%B5%EC%A7%80">
                 <button class="custom-btn btn-1">정보시스템학과</button>
             </a>
