--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <body>
         <div>
             <a href="https://portal.hanyang.ac.kr/sso/lgin.do">
-                <button class="custom-btn btn-1">한양인</button>
+                <button class="custom-btn btn-1">Portal</button>
             </a>
         </div>
         <div>
